src/main/java/com/example/storeprojectstep1/errors/exception/Exception500.java
package com.example.storeprojectstep1.errors.exception;

public class Exception500 extends RuntimeException {
    public Exception500(String msg) {
        super(msg);
    }
}